# stagent

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
agents/skills/stagent-review/: SKILL.md
src/: app.rs  diff.rs  editor.rs  feedback.rs  git.rs  highlight.rs  lib.rs  main.rs  patch.rs  spawn.rs  staging.rs  types.rs
src/ui/: diff_view.rs  file_list.rs  help_overlay.rs  mod.rs  status_bar.rs  theme.rs
tests/: cli_test.rs  comment_feedback_test.rs  editor_test.rs  git_diff_test.rs  pane_close_repro_test.rs  patch_parse_test.rs  spawn_test.rs  staging_test.rs  ui_test.rs
tests/helpers/: mod.rs
